--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p <a class="download" href="#"> Download Excursion (Coming Soon!)</a> </p>
+    <p <img src="Resources/videos/excursion.mp4"></p>
   </body>
 </html>
