--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p <a class="download" href="#"> Download Excursion (Coming Soon!)</a> </p>
-    <p <img src="Resources/videos/excursion.mp4"></p>
+    <p><video autoplay mutedloop src="Resources/videos/excursion.mp4" type="video/mp4">
+    </video> </p>
+
   </body>
 </html>
