--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p <a class="download" href="#"> Download Excursion (Coming Soon!)</a> </p>
-    <p><video autoplay mutedloop src="Resources/videos/excursion.mp4" type="video/mp4">
+    <p><video autoplay muted loop>
+      <source src="Resources/videos/excursion.mp4" type="video/mp4">
     </video> </p>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="Resources/images/camp.jpg"></p>
+    <p><img src="Resources/images/phone.png"></p>
   </body>
 </html>
