created bottom link and synced decoration

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <p <a class="download" href="#"> Download Excursion (Coming Soon!)</a> </p>
+    <p id="top"> Download Excursion (Coming Soon!) </p>
     <p><video autoplay muted loop>
       <source src="Resources/videos/excursion.mp4" type="video/mp4">
     </video> </p>
@@ -15,5 +15,7 @@
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="Resources/images/camp.jpg"></p>
     <p><img src="Resources/images/phone.png"></p>
+    <h2>Comming Soon for iPhone and Android</h2>
+    <a href="#top"> Download Excursion (Coming Soon!)</a>
   </body>
 </html>
