added copyright footer

--- a/index.html
+++ b/index.html
@@ -17,5 +17,8 @@
     <p><img src="Resources/images/phone.png"></p>
     <h2>Comming Soon for iPhone and Android</h2>
     <a href="#top"> Download Excursion (Coming Soon!)</a>
+    <div class="footer">
+      <p>&copy; Excursion </p>
+    </div>
   </body>
 </html>
