took away p tag from video

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
     <p id="top"> Download Excursion (Coming Soon!) </p>
-    <p><video autoplay muted loop>
+    <video autoplay muted loop>
       <source src="Resources/videos/excursion.mp4" type="video/mp4">
-    </video> </p>
+    </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p><img src="Resources/images/camp.jpg"></p>
