--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <h1>Discover hidden places in the world around you</h1>
     <p id="top"> Download Excursion (Coming Soon!) </p>
     <video autoplay muted loop>
-      <source src="Resources/videos/excursion.mp4" type="video/mp4">
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p><img src="Resources/images/camp.jpg"></p>
-    <p><img src="Resources/images/phone.png"></p>
+    <p><img src="resources/images/camp.jpg"></p>
+    <p><img src="resources/images/phone.png"></p>
     <h2>Comming Soon for iPhone and Android</h2>
     <a href="#top"> Download Excursion (Coming Soon!)</a>
     <div class="footer">
